Part of bug 455801 - deal with long cc lines and other overflow situations. r=dmose,ui-review=clarkbw

--- a/mail/themes/pinstripe/mail/messageHeader.css
+++ b/mail/themes/pinstripe/mail/messageHeader.css
@@ -56,7 +56,6 @@
 
 #expandedHeaderView {
   color: #2e3436;
-  /*padding-top: .5em;*/
   font-size: 12px;
   overflow: visible;
 }
@@ -317,6 +316,10 @@ description[selectable="true"]:focus > descriptionitem[selected="true"]
   background-color: transparent;
 }
 
+.headerValueBox[singleline="true"] {
+  overflow: hidden;
+}
+
 .headerValueUrl {
   cursor: pointer;
   color: #0000FF;
@@ -436,12 +439,23 @@ description[selectable="true"]:focus > descriptionitem[selected="true"]
 /* ::::: email address twisty ::::: */
 
 .addresstwisty {
-  list-style-image:url("chrome://messenger/skin/icons/twisty-closed.gif");
+  -moz-padding-end: 5px;
+  padding-top: 4px;
+  list-style-image:url("chrome://messenger/skin/icons/arrow/arrow-right-dim.png");
+}
+
+.addresstwisty:hover {
+  list-style-image:url("chrome://messenger/skin/icons/arrow/arrow-right.png");
 }
 
 .addresstwisty[open] {
-  list-style-image:url("chrome://messenger/skin/icons/twisty-open.gif");
+  list-style-image:url("chrome://messenger/skin/icons/arrow/arrow-down-dim.png");
 }
+
+.addresstwisty[open]:hover {
+  list-style-image:url("chrome://messenger/skin/icons/arrow/arrow-down.png");
+}
+
 
 /* ::::: view expand and collapse twisties  ::::: */
 
